BusOne/src/objects/Plan_Product__c.object
<CustomObject>
    <description>Used to store the unique plan product data.</description>
    <fields>
        <fullName>BOT_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to Account</description>
        <label>Account Name</label>
        <referenceTo>Account_Unique__c</referenceTo>
        <relationshipLabel>Plan Demographics</relationshipLabel>
        <relationshipName>BOT_Account_plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>MCO Confirmed</fullName>
                </value>
                <value>
                    <fullName>PBMReport</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOT_Entity_ID__c</fullName>
        <description>To store the BOT Uiqueue Entity ID</description>
        <label>BOT Entity ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Formulary_Used__c</fullName>
        <description>Used to store the Formulary used value.</description>
        <label>Formulary Used</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_PBM__c</fullName>
        <description>Used to store the PBM value.</description>
        <label>PBM</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Plan_Product_ID__c</fullName>
        <description>Used to store the BOT Plan Product ID</description>
        <label>Plan Product ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Product_Lives_Rx__c</fullName>
        <description>Used to store the Plan Product Lives.</description>
        <label>Product Lives Rx</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Product_Lives__c</fullName>
        <description>To store product lives</description>
        <label>Product Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Product_Type__c</fullName>
        <description>Used to store the product type.</description>
        <label>Product Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Plan Product Unique</label>
    <nameField>
        <label>Plan Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>